--- a/app/src/main/res/layout/activity_perfil_vendedor.xml
+++ b/app/src/main/res/layout/activity_perfil_vendedor.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PerfilVendedor">
+    tools:context=".SellerProfile">
 
     <ScrollView
         android:layout_width="match_parent"
