--- a/app/src/main/res/layout/activity_product_register.xml
+++ b/app/src/main/res/layout/activity_product_register.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:gravity="center_horizontal"
-        android:text="PRODUCT REGISTER"
+        android:text="REGISTRO DEL PRODUCTO"
         android:textSize="22sp"
         android:textStyle="bold"
         android:textColor="#FFFFFF"
@@ -28,12 +28,59 @@
         android:layout_width="1dp"
         android:layout_height="15dp" />
 
+    <!--Category name label -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="Categoría:"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        android:textColor="#FFFFFF"
+        />
+
+    <RadioGroup
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+
+        <RadioButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Desayuno"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp"
+            android:id="@+id/rbtnDesayuno"
+            android:checked="true"
+            />
+
+        <RadioButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Almuerzo"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp"
+            android:id="@+id/rbtnAlmuerzo"
+            />
+
+        <RadioButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Comida Rápida"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp"
+            android:id="@+id/rbtnComidaRapida"
+            />
+    </RadioGroup>
+    <Space
+        android:layout_width="1dp"
+        android:layout_height="15dp" />
     <!--Product name label -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text="Product Name:"
+        android:text="Nombre:"
         android:textSize="22sp"
         android:textStyle="bold"
         android:textColor="#FFFFFF"
@@ -65,7 +112,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text="Description:"
+        android:text="Descripción:"
         android:textSize="22sp"
         android:textStyle="bold"
         android:textColor="#FFFFFF"
@@ -129,7 +176,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text="Cost:"
+        android:text="Costo:"
         android:textSize="22sp"
         android:textStyle="bold"
         android:textColor="#FFFFFF"
