--- a/app/src/main/res/layout/activity_product_register.xml
+++ b/app/src/main/res/layout/activity_product_register.xml
@@ -95,7 +95,7 @@
         android:id="@+id/productName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Maximum 30 characters"
+        android:hint="Máximo 30 caracteres"
         android:layout_weight="0.50"
         android:selectAllOnFocus="false"
         android:singleLine="false"
@@ -127,7 +127,7 @@
         android:id="@+id/productDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Maximun 240 characters"
+        android:hint="Máximo 240 caracteres"
         android:layout_weight="0.50"
         android:selectAllOnFocus="false"
         android:singleLine="false"
@@ -159,7 +159,7 @@
         android:id="@+id/productStock"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Integer number"
+        android:hint="Número sin decimal"
         android:layout_weight="0.50"
         android:selectAllOnFocus="false"
         android:singleLine="false"
@@ -191,7 +191,7 @@
         android:id="@+id/productCost"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Number separed by dot"
+        android:hint="Número separado por punto"
         android:layout_weight="0.50"
         android:selectAllOnFocus="false"
         android:singleLine="false"
@@ -213,10 +213,10 @@
         <!--Register of product buttom-->
         <Button
             android:id="@+id/btnRegister"
-            android:layout_width="100dp"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="REGISTER"
+            android:text="REGISTARSE"
             android:textSize="15sp"
             android:textColor="#000000"/>
     </LinearLayout>
