--- a/app/src/main/res/layout/activity_product_register.xml
+++ b/app/src/main/res/layout/activity_product_register.xml
@@ -216,7 +216,7 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="REGISTARSE"
+            android:text="REGISTRAR"
             android:textSize="15sp"
             android:textColor="#000000"/>
     </LinearLayout>
