--- a/app/src/main/res/menu/activity_lateral_menu_drawer.xml
+++ b/app/src/main/res/menu/activity_lateral_menu_drawer.xml
@@ -5,6 +5,10 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_home"
+            android:icon="@drawable/ic_home_black"
+            android:title="Inicio"/>
+        <item
             android:id="@+id/nav_shopper"
             android:icon="@drawable/ic_shopper"
             android:title="Perfil Comprador" />
